# faris

./: README.md  pyproject.toml
collections/ansible_collections/foo/bar/: galaxy.yml
collections/ansible_collections/foo/bar/extensions/molecule/default/: converge.yml
collections/ansible_collections/foo/bar/roles/elasticsearch_ubuntu/defaults/: main.yml
collections/ansible_collections/foo/bar/roles/elasticsearch_ubuntu/handlers/: main.yml
collections/ansible_collections/foo/bar/roles/elasticsearch_ubuntu/tasks/: main.yml
collections/ansible_collections/foo/bar/roles/elasticsearch_ubuntu/tests/: test.yml
collections/ansible_collections/foo/bar/roles/elasticsearch_ubuntu/vars/: main.yml
collections/ansible_collections/foo/bar/roles/my_role/tasks/: main.yml
